service-peccy-web/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-peccy-web
  labels:
    app: service-peccy-web
spec:
  replicas: 12
  selector:
    matchLabels:
      app: service-peccy-web
  template:
    metadata:
      labels:
        app: service-peccy-web
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: web-server
      containers:
      - name: service-peccy-web
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30 
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 30
          periodSeconds: 5
        volumeMounts:
        - name: tz-seoul
          mountPath: /etc/localtime
      volumes:
        - name: tz-seoul
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
