service-peccy-web/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-peccy-web
spec:
  type: NodePort
  selector:
    app: service-peccy-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
