service-peccy-web/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: service-peccy-web
  annotations:
    external-dns.alpha.kubernetes.io/alias: true
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
spec:
  ingressClassName: alb
  rules:
  - host: peccy.aws-playground.dev 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-peccy-web
            port:
              number: 80
